<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agricobiot_husky_launchs</name>
  <version>0.0.1</version>
  <description>Configuration files for Agricobiot Husky robot</description>

  <maintainer email="agricogitbiot@googlegroups.com">agricogitbiot group</maintainer>

  <license>Privative</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>mrpt_sensors</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
